[package]
name = "stock-panel"
version = "0.1.0"
edition = "2021"

[dependencies]
rppal = "0.22.1"
linux-embedded-hal = "0.3.1"
embedded-graphics = "0.7.1"
ssd1306 = "0.7.0"
reqwest = { version = "0.12.9", features = ["blocking", "json"], default-features = false }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
anyhow = "1.0.95"
